--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,6 +25,17 @@
             <td>
               <%= book.body %>
             </td>
+            <td><% if book.favorited_by?(current_user) %>
+                  <%= link_to book_favorites_path(book.id), method: :delete do %>
+                    ♥<%= book.favorites.count %>
+                  <% end %>
+                <% else %>
+                  <%= link_to book_favorites_path(book.id), method: :post do %>
+                    ♡<%= book.favorites.count %>
+                  <% end %>
+                <% end %>
+            </td>
+            <td><%= link_to "コメント数:#{book.book_comments.count}", book_path(book.id) %></td>
           </tr>
           <% end %>
         </tbody>
