--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,9 +18,47 @@
             <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
             <td><%= link_to "Destroy", book_path(@book), method: :delete ,"data-confirm" => "本当に消しますか？" %></td>
             <% end %>
+            <td><% if @book.favorited_by?(current_user) %>
+                  <%= link_to book_favorites_path(@book), method: :delete do %>
+                    ♥<%= @book.favorites.count %>
+                  <% end %>
+                <% else %>
+                  <%= link_to book_favorites_path(@book), method: :post do %>
+                    ♡<%= @book.favorites.count %>
+                  <% end %>
+                <% end %>
+            </td>
+            <td><%= link_to "コメント数: #{@book.book_comments.count} ", book_path(@book.id) %></td>
           </tr>
         </tbody>
       </table>
+      <table>
+        <tbody>
+          <% @book.book_comments.each do |book_comment| %>
+          <tr>
+            <td>
+              <%= link_to user_path(book_comment.user) do %>
+              <%= image_tag book_comment.user.get_profile_image(100,100) %>
+              <% end %>
+            </td>
+            <td>
+              <%= book_comment.comment %>
+            </td>
+            <td>
+              <% if book_comment.user == current_user %>
+                <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+              <% end %>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <div class="form-group">
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment %>
+          <%= f.submit '送信', class: "btn btn-outline-secondary" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
