--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%= render 'books/list', book: @book, user: @user %>
+    <%= render 'books/list', book: @book_n, user: @user %>
     <div class="col-md-8 offset-md-1">
       <h1>Books</h1>
       <table class=table>
@@ -25,6 +25,7 @@
             <td>
               <%= book.body %>
             </td>
+            <td><%= link_to "コメント数: #{@book.book_comments.count} ", book_path(book.id) %></td>
           </tr>
           <% end %>
         </tbody>
