--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -14,23 +14,23 @@
       </tr>
       <tr>
         <th>follows</th>
-        <th><%= user.followings.count %></th>
+        <th><%= link_to user.followings.count,user_followings_path(user.id) %></th>
       </tr>
       <tr>
         <th>followers</th>
-        <th><%= user.followers.count %></th>
+        <th><%= link_to user.followers.count,user_followers_path(user.id)%></th>
       </tr>
     </tbody>
   </table>
-  <button type="button" class="btn btn-success">
     <% if user != current_user %>
+    <button type="button" class="btn btn-success">
       <% if current_user.following?(user) %>
         <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
       <% else %>
         <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
       <% end %>
+    </button>
     <% end %>
-  </button>
   <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
     <i class="fas fa-user-cog"></i>
     <% end %>
