--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,17 +18,8 @@
             <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
             <td><%= link_to "Destroy", book_path(@book), method: :delete ,"data-confirm" => "本当に消しますか？" %></td>
             <% end %>
-            <td><% if @book.favorited_by?(current_user) %>
-                  <%= link_to book_favorites_path(@book), method: :delete do %>
-                    ♥<%= @book.favorites.count %>
-                  <% end %>
-                <% else %>
-                  <%= link_to book_favorites_path(@book), method: :post do %>
-                    ♡<%= @book.favorites.count %>
-                  <% end %>
-                <% end %>
-            </td>
-            <td>コメント数: <%= @book.book_comments.count %></td>
+            <td class=<%= "favorite-" + book.id.to_s %>><%= render 'favorites/favorite', book: book, user: current_user %></td>
+            <td><%= render 'book_comments/comment_count', book: book, user: current_user %></td>
           </tr>
         </tbody>
       </table>
