--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -1,19 +1,27 @@
-<tbody>
-  <% @book.book_comments.each do |book_comment| %>
-  <tr>
-    <td>
-      <%= link_to user_path(book_comment.user) do %>
-      <%= image_tag book_comment.user.get_profile_image(100,100) %>
-      <% end %>
-    </td>
-    <td>
-      <%= book_comment.comment %>
-    </td>
-    <td>
-      <% if book_comment.user == current_user %>
-        <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
-      <% end %>
-    </td>
-  </tr>
+<table>
+  <tbody>
+    <% book.book_comments.each do |book_comment| %>
+    <tr>
+      <td>
+        <%= link_to user_path(book_comment.user) do %>
+        <%= image_tag book_comment.user.get_profile_image(100,100) %>
+        <% end %>
+      </td>
+      <td>
+        <%= book_comment.comment %>
+      </td>
+      <td>
+        <% if book_comment.user == current_user %>
+          <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+        <% end %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
+<div class="form-group">
+  <%= form_with model: [book, book_comment], local: false do |f| %>
+    <%= f.text_area :comment %>
+    <%= f.submit '送信', class: "btn btn-outline-secondary" %>
   <% end %>
-</tbody>
+</div>
